--- a/.github/workflows/master_ottertrackinguk.yml
+++ b/.github/workflows/master_ottertrackinguk.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - ottertrackingUK
+name: Build and deploy ASP.Net Core app to Azure Web App - ottertrackinguk
 
 on:
   push:
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'ottertrackingUK'
+          app-name: 'ottertrackinguk'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B0B7B49E1C0C441986A5985F5A2B9507 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_28C9B96F10584D97B4657BE3C358C21A }}
           package: .
