--- a/.github/workflows/master_ottertrackersuk.yml
+++ b/.github/workflows/master_ottertrackersuk.yml
@@ -40,21 +40,12 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
-      
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_6DD9AC7BA4EC4B90B5297EB226656CA2 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4A132C25EDDC44F5B63BECE18AFDF048 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F86E0E73C3C645098AD58AE22D0E6974 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -62,5 +53,5 @@ jobs:
         with:
           app-name: 'ottertrackersuk'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4E3D3EBAE35B46F689E6FFD26081705A }}
           package: .
-          
