--- a/.github/workflows/master_ottertrackersuk.yml
+++ b/.github/workflows/master_ottertrackersuk.yml
@@ -40,12 +40,21 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
+      
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_AA0150E2137B4C4BAF142CDBC15663A5 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A24CB67FD33B42C3BE0177DE8B6C0209 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7E19D0720E914AAA871CEAC548AFFB93 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -53,5 +62,5 @@ jobs:
         with:
           app-name: 'ottertrackersuk'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4E3D3EBAE35B46F689E6FFD26081705A }}
           package: .
+          
